# showcert

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: camo-purge.yml  main.yml
showcert/: __about__.py  __init__.py  __main__.py  exceptions.py  gencert.py  getremote.py  printcert.py  processcert.py  showcert.py  utils.py  verifychain.py
showcert/cli/: gencert_main.py  showcert_main.py
tests/: test_client.py  test_gencert.py  test_gencert_main.py  test_local.py  test_pkcs12.py  test_remote.py  test_showcert.py  test_showcert_main.py
